# sofixit_task

./: .gitignore  Cargo.toml  README.md
.metals/: metals.mv.db
src/: data_csv.rs  data_gen.rs  expressionGrammar.pest  expression_parser.rs  main.rs  performance_measure.rs  services.rs
