[package]
name = "sofixit_task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
rand = "0.8.5"
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
rayon = "1.8.0"
reqwest = {version = "0.11.22", features = ["blocking", "json"]}
csv = "1.3.0"
indexmap = "2.1.0"
regex = "1.10.2"
pest = "2.7.5"
pest_derive = "2.7.5"
lazy_static = "1.4.0"
sysinfo = "0.29.11"